chore: add scripts to download data

--- a/notebooks/cnn_cats_vs_dogs_tf.ipynb
+++ b/notebooks/cnn_cats_vs_dogs_tf.ipynb
@@ -16,11 +16,7 @@
     "download the data\n",
     "\n",
     "```sh\n",
-    "# from root dir\n",
-    "kaggle competitions download -c dogs-vs-cats -p ./notebooks/data/cats_vs_dogs\n",
-    "cd notebooks/data/cats_vs_dogs\n",
-    "unzip -qq dogs-vs-cats.zip\n",
-    "unzip -qq train.zip\n",
+    "pdm run data_cats_vs_dogs\n",
     "```"
    ]
   },
