feat: add imdb review with sequence

--- a/notebooks/ngram_imdb_review.ipynb
+++ b/notebooks/ngram_imdb_review.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c8b0a6f4-99c2-4acd-9122-f6e0e5d0ed1a",
+   "metadata": {},
+   "source": [
+    "# Processing words as a set: The bag-of-words approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "359da18c-dc27-41ec-91a1-7362771b050c",
    "metadata": {},
    "source": [
@@ -33,16 +41,25 @@
    "outputs": [],
    "source": [
     "base_dir = pathlib.Path(\"./data/acl_imdb/aclImdb\")\n",
-    "val_dir = base_dir / \"val\"\n",
-    "train_dir = base_dir / \"train\"\n",
-    "for category in (\"neg\", \"pos\"):\n",
-    "    os.makedirs(val_dir / category)\n",
-    "    files = os.listdir(train_dir / category)\n",
-    "    random.Random(1337).shuffle(files)\n",
-    "    num_val_samples = int(0.2 * len(files))\n",
-    "    val_files = files[-num_val_samples:]\n",
-    "    for fname in val_files:\n",
-    "        shutil.move(train_dir / category / fname, val_dir / category / fname)"
+    "\n",
+    "\n",
+    "def prepare_val_data():\n",
+    "    val_dir = base_dir / \"val\"\n",
+    "    if val_dir.exists():\n",
+    "        print(\"validation data already existed\")\n",
+    "        return\n",
+    "    train_dir = base_dir / \"train\"\n",
+    "    for category in (\"neg\", \"pos\"):\n",
+    "        os.makedirs(val_dir / category)\n",
+    "        files = os.listdir(train_dir / category)\n",
+    "        random.Random(1337).shuffle(files)\n",
+    "        num_val_samples = int(0.2 * len(files))\n",
+    "        val_files = files[-num_val_samples:]\n",
+    "        for fname in val_files:\n",
+    "            shutil.move(train_dir / category / fname, val_dir / category / fname)\n",
+    "\n",
+    "\n",
+    "prepare_val_data()"
    ]
   },
   {
