chore(ask_gpt): use gpt-4o as default model

--- a/notebooks/metrics/BLEU.ipynb
+++ b/notebooks/metrics/BLEU.ipynb
@@ -5,7 +5,7 @@
    "id": "d601f074-abbb-43bc-b714-ef0af7f550e3",
    "metadata": {},
    "source": [
-    "# [BLUE (BiLingual Evaluation Understudy)](https://docs.kolena.io/metrics/bleu/)\n",
+    "# [BLEU (BiLingual Evaluation Understudy)](https://docs.kolena.io/metrics/bleu/)\n",
     "\n",
     "- The BLEU (BiLingual Evaluation Understudy) score is a metric to evaluate the quality of candidate texts.\n",
     "- BLEU can be thought of as an analog to precision for text comparisons.\n",
