chore: upgrade openai dependencies

--- a/notebooks/prompt_engineering /l2-guidelines.ipynb
+++ b/notebooks/prompt_engineering /l2-guidelines.ipynb
@@ -7,31 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "import openai\n",
-    "from dotenv import find_dotenv, load_dotenv\n",
-    "\n",
-    "_ = load_dotenv(find_dotenv())\n",
-    "\n",
-    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bf0d6f64-f2c0-4699-a1e2-8eb617dac0d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0,  # this is the degree of randomness of the model's output\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "from ml_playground.ask_gpt.utils import get_completion"
    ]
   },
   {
@@ -51,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "84d69be1-e776-4660-81b8-da965bfd51b8",
    "metadata": {},
    "outputs": [
@@ -59,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To guide a model towards the desired output and reduce the chances of irrelevant or incorrect responses, it is important to provide clear and specific instructions, which may be longer prompts that provide more clarity and context for the model.\n"
+      "To achieve desired outputs from a model, provide clear, specific instructions, understanding that longer prompts often offer more clarity and context, thus reducing the likelihood of irrelevant or incorrect responses.\n"
      ]
     }
    ],
@@ -96,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "49bad3ae-a0ce-46b4-b1d3-c903f1609f62",
    "metadata": {},
    "outputs": [
@@ -106,22 +82,22 @@
      "text": [
       "[\n",
       "  {\n",
-      "    \"book_id\": 1,\n",
-      "    \"title\": \"The Lost City of Zorath\",\n",
-      "    \"author\": \"Aria Blackwood\",\n",
+      "    \"book_id\": \"1\",\n",
+      "    \"title\": \"The Echoes of Forgotten Dreams\",\n",
+      "    \"author\": \"Amanda Sterling\",\n",
       "    \"genre\": \"Fantasy\"\n",
       "  },\n",
       "  {\n",
-      "    \"book_id\": 2,\n",
-      "    \"title\": \"The Last Survivors\",\n",
-      "    \"author\": \"Ethan Stone\",\n",
-      "    \"genre\": \"Science Fiction\"\n",
+      "    \"book_id\": \"2\",\n",
+      "    \"title\": \"The Last Symphony of Silence\",\n",
+      "    \"author\": \"Jonathan Kellerman\",\n",
+      "    \"genre\": \"Mystery\"\n",
       "  },\n",
       "  {\n",
-      "    \"book_id\": 3,\n",
-      "    \"title\": \"The Secret of the Haunted Mansion\",\n",
-      "    \"author\": \"Lila Rose\",\n",
-      "    \"genre\": \"Mystery\"\n",
+      "    \"book_id\": \"3\",\n",
+      "    \"title\": \"Beneath the Shadows of the Past\",\n",
+      "    \"author\": \"Isabella Hart\",\n",
+      "    \"genre\": \"Historical Fiction\"\n",
       "  }\n",
       "]\n"
      ]
@@ -148,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "feda084d-b369-40ce-898b-5b0afe211691",
    "metadata": {},
    "outputs": [
@@ -162,10 +138,8 @@
       "Step 3 - Once the water is hot enough, pour it over the tea bag.\n",
       "Step 4 - Let it sit for a bit so the tea can steep.\n",
       "Step 5 - After a few minutes, take out the tea bag.\n",
-      "Step 6 - Add some sugar or milk to taste.\n",
-      "Step 7 - Enjoy your delicious cup of tea!\n",
-      "\n",
-      "\n"
+      "Step 6 - If you like, you can add some sugar or milk to taste.\n",
+      "Step 7 - Enjoy your delicious cup of tea.\n"
      ]
     }
    ],
@@ -203,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a1e44244-f49a-4e2b-b368-84e09b0ca8d6",
    "metadata": {},
    "outputs": [
@@ -258,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b05cdb09-ee1d-43e8-ae98-a3ca4da4234b",
    "metadata": {},
    "outputs": [
@@ -266,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<grandparent>: Resilience is like a tree that bends with the wind but never breaks. It is the ability to bounce back from adversity and keep moving forward, even when things get tough. Just like a tree that grows stronger with each storm it weathers, resilience is a quality that can be developed and strengthened over time.\n"
+      "<grandparent>: The mightiest oak in the forest was once a tiny acorn that stood its ground; the most majestic mountain has weathered countless storms; the most beautiful diamond was once a lump of coal that withstood immense pressure.\n"
      ]
     }
    ],
@@ -299,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1429ef10-2b09-410c-bf6a-7a09ef515ae3",
    "metadata": {},
    "outputs": [
@@ -308,15 +282,10 @@
      "output_type": "stream",
      "text": [
       "Completion for prompt 1:\n",
-      "Two siblings, Jack and Jill, go on a quest to fetch water from a well on a hilltop, but misfortune strikes and they both tumble down the hill, returning home slightly battered but with their adventurous spirits undimmed.\n",
-      "\n",
-      "Deux frères et sœurs, Jack et Jill, partent en quête d'eau d'un puits sur une colline, mais un malheur frappe et ils tombent tous les deux de la colline, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts. \n",
-      "Noms: Jack, Jill. \n",
-      "\n",
-      "{\n",
-      "  \"french_summary\": \"Deux frères et sœurs, Jack et Jill, partent en quête d'eau d'un puits sur une colline, mais un malheur frappe et ils tombent tous les deux de la colline, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\",\n",
-      "  \"num_names\": 2\n",
-      "}\n"
+      "1 - Jack and Jill, siblings from a charming village, went on a quest to fetch water from a hilltop well, but despite tripping and falling, they returned home and continued exploring with undimmed spirits.\n",
+      "2 - Jack et Jill, frères et sœurs d'un charmant village, sont partis en quête pour chercher de l'eau à un puits en haut d'une colline, mais malgré des chutes, ils sont rentrés chez eux et ont continué à explorer avec des esprits indomptés.\n",
+      "3 - Jack, Jill\n",
+      "4 - {\"french_summary\": \"Jack et Jill, frères et sœurs d'un charmant village, sont partis en quête pour chercher de l'eau à un puits en haut d'une colline, mais malgré des chutes, ils sont rentrés chez eux et ont continué à explorer avec des esprits indomptés.\", \"num_names\": 2}\n"
      ]
     }
    ],
@@ -405,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "33889678-2e9f-4ef0-a33a-cba279d539be",
    "metadata": {},
    "outputs": [
@@ -455,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9a675727-6893-422c-aae8-3941018c84ef",
    "metadata": {},
    "outputs": [
@@ -463,19 +432,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "```\n",
       "Let x be the size of the installation in square feet.\n",
-      "\n",
       "Costs:\n",
       "1. Land cost: 100x\n",
       "2. Solar panel cost: 250x\n",
       "3. Maintenance cost: 100,000 + 10x\n",
-      "\n",
       "Total cost: 100x + 250x + 100,000 + 10x = 360x + 100,000\n",
-      "\n",
+      "```\n",
       "Is the student's solution the same as actual solution just calculated:\n",
+      "```\n",
       "No\n",
-      "\n",
+      "```\n",
       "Student grade:\n",
+      "```\n",
       "Incorrect\n"
      ]
     }
@@ -566,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
