--- a/notebooks/prompt_engineering /l4-summarizing.ipynb
+++ b/notebooks/prompt_engineering /l4-summarizing.ipynb
@@ -7,36 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "import openai\n",
-    "from dotenv import find_dotenv, load_dotenv\n",
-    "\n",
-    "_ = load_dotenv(find_dotenv())  # read local .env file\n",
-    "\n",
-    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
+    "from ml_playground.ask_gpt.utils import get_completion"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0e182a17-2b52-4575-b96c-3e74b9391764",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0,  # this is the degree of randomness of the model's output\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "ce53cc1c-f018-4d89-93c5-0fc1800d9ff9",
    "metadata": {},
    "outputs": [],
@@ -55,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f8ea4dd5-83d7-4784-9e43-3f51959938e1",
    "metadata": {},
    "outputs": [
@@ -63,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early.\n"
+      "The reviewer bought a panda plush toy for their daughter's birthday. They found it soft, cute, and friendly-looking, but smaller than expected for the price. It arrived early.\n"
      ]
     }
    ],
@@ -84,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "60ed4eab-b65d-4629-829b-d8a1f70b616f",
    "metadata": {},
    "outputs": [
@@ -92,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The panda plush toy arrived a day earlier than expected, but the customer felt it was a bit small for the price paid.\n"
+      "The panda plush toy arrived a day earlier than expected, providing a positive shipping experience for the customer.\n"
      ]
     }
    ],
@@ -115,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "274c7309-bf91-4585-abf1-750464f01d59",
    "metadata": {},
    "outputs": [
@@ -123,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The panda plush toy is soft, cute, and loved by the recipient, but the price may be too high for its size.\n"
+      "The customer is satisfied with the panda plush toy's quality and design, but feels it is a bit small for the price paid, suggesting larger options may be available at the same cost.\n"
      ]
     }
    ],
@@ -155,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3072cc57-15c9-49cb-95f8-26c8df7cc38e",
    "metadata": {},
    "outputs": [
@@ -163,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The product arrived a day earlier than expected.\n"
+      "The panda plush toy arrived a day earlier than expected.\n"
      ]
     }
    ],
@@ -194,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "28522e52-03b6-4142-8bb6-b55ee82744e0",
    "metadata": {},
    "outputs": [],
@@ -274,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b74d72f8-6ed0-4c5a-a6a5-e7d553930bfd",
    "metadata": {},
    "outputs": [
@@ -282,13 +258,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early. \n",
+      "0 The reviewer bought a panda plush toy for their daughter's birthday, which she loves, but found it smaller than expected for the price. \n",
       "\n",
-      "1 Affordable lamp with storage, fast shipping, and excellent customer service. Easy to assemble and missing parts were quickly replaced. \n",
+      "1 The reviewer appreciated the affordable lamp with storage, praised the company's quick delivery and customer service for replacing broken and missing parts. \n",
       "\n",
-      "2 Good battery life, small toothbrush head, but effective cleaning. Good deal if bought around $50. \n",
+      "2 The reviewer recommends the electric toothbrush for its impressive battery life and clean feeling, but criticizes the small brush head. \n",
       "\n",
-      "3 Mixed review of a blender system with price gouging and decreased quality, but helpful tips for use. \n",
+      "3 The reviewer bought a 17-piece system on sale but noticed a price increase in December. They found the quality lower than previous versions, experienced motor issues after a year, and had to buy a replacement. \n",
       "\n"
      ]
     }
@@ -334,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
