--- a/notebooks/prompt_engineering /l7-expanding.ipynb
+++ b/notebooks/prompt_engineering /l7-expanding.ipynb
@@ -7,31 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "import openai\n",
-    "from dotenv import find_dotenv, load_dotenv\n",
-    "\n",
-    "_ = load_dotenv(find_dotenv())  # read local .env file\n",
-    "\n",
-    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5f481f78-3839-412f-996a-70c30b741b58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=temperature,\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "from ml_playground.ask_gpt.utils import get_completion"
    ]
   },
   {
@@ -44,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "75b9074d-5ee9-4cc8-831c-3a4e6620db77",
    "metadata": {},
    "outputs": [],
@@ -90,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "632be152-c396-4048-b3b2-8311740d84d3",
    "metadata": {},
    "outputs": [
@@ -98,17 +74,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Subject: Your Recent Product Review and Feedback\n",
+      "\n",
       "Dear Valued Customer,\n",
       "\n",
-      "Thank you for taking the time to leave a review about our product. We are sorry to hear that you experienced an increase in price and that the quality of the product did not meet your expectations. We apologize for any inconvenience this may have caused you.\n",
+      "Thank you for taking the time to share your detailed review and feedback about our 17 piece system. We sincerely apologize for any inconvenience you may have experienced with the price changes and the quality of the product.\n",
       "\n",
-      "We would like to assure you that we take all feedback seriously and we will be sure to pass your comments along to our team. If you have any further concerns, please do not hesitate to reach out to our customer service team for assistance.\n",
+      "We understand your concerns about the price increase during the holiday season and the quality of the blade locking mechanism. We also regret to hear about the motor issue you experienced after a year of use. We are always striving to improve our products and services, and your feedback is invaluable in this process.\n",
       "\n",
-      "Thank you again for your review and for choosing our product. We hope to have the opportunity to serve you better in the future.\n",
+      "We're sorry to hear that your warranty had expired when you reached out to our customer service. We would like to assure you that we are committed to providing the best possible service to our customers. If you have any further issues or concerns, please do not hesitate to contact our customer service team again. We are here to help.\n",
       "\n",
-      "Best regards,\n",
+      "We appreciate your loyalty and your helpful tips on how to use our product more effectively. We will take your feedback into account as we continue to improve our products and services.\n",
       "\n",
-      "AI customer agent\n"
+      "Thank you again for your feedback. We value your business and look forward to serving you better in the future.\n",
+      "\n",
+      "Best Regards,\n",
+      "\n",
+      "AI Customer Agent\n"
      ]
     }
    ],
@@ -142,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "770bb600-69e7-4e35-aa24-a951db6e9376",
    "metadata": {},
    "outputs": [
@@ -150,17 +132,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Subject: Response to Your Recent Review\n",
+      "\n",
       "Dear Valued Customer,\n",
       "\n",
-      "Thank you for taking the time to share your feedback with us. We are sorry to hear that you had a negative experience with our product pricing and quality. We apologize for any inconvenience this may have caused you.\n",
+      "Thank you for taking the time to share your detailed review about the price fluctuation and the overall quality of our products. We sincerely apologize for any inconvenience caused.\n",
       "\n",
-      "We would like to assure you that we strive to provide the best possible product and pricing for our customers. If you have any further concerns, please do not hesitate to reach out to our customer service team, who will be more than happy to assist you.\n",
+      "We understand your concerns about the price changes during the holiday season and the perceived decline in quality. We assure you that our pricing strategy is designed to provide the best value to our customers, and we are constantly working on maintaining and improving the quality of our products.\n",
       "\n",
-      "Thank you again for your feedback, and we hope to have the opportunity to serve you better in the future.\n",
+      "Your feedback on the blade lock and the changes in operation over time is greatly appreciated. Our design and manufacturing teams will look into these issues closely. \n",
       "\n",
-      "Best regards,\n",
+      "We regret to hear that you had to purchase a new product due to the motor making a funny noise after the warranty expired. Our customer service team is dedicated to assisting you further. We encourage you to reach out to them if you have any issues with your new product or if you need any assistance with your future purchases.\n",
       "\n",
-      "AI customer agent\n"
+      "Your satisfaction is our top priority, and we value your loyalty. We appreciate your patience and understanding as we strive to serve you better.\n",
+      "\n",
+      "Thank you for your continued support.\n",
+      "\n",
+      "Best Regards,\n",
+      "\n",
+      "AI Customer Agent\n"
      ]
     }
    ],
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b0e2c186-b18d-4ed7-8c2e-441e35fe2df5",
    "metadata": {},
    "outputs": [
@@ -194,17 +184,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dear valued customer,\n",
+      "Subject: Your Valuable Feedback Has Been Noted\n",
       "\n",
-      "Thank you for taking the time to write a review about our product. We are sorry to hear that you experienced a negative change in price and that the quality of the product has gone down. We would like to apologize for any inconvenience this may have caused. \n",
+      "Dear Customer,\n",
       "\n",
-      "We suggest that you reach out to our customer service team for further assistance, as they may be able to offer a solution to your problem. Please let us know if there is anything else we can do to assist you.\n",
+      "Thank you for taking the time to share your recent experience with our 17-piece system. We are sincerely sorry to hear that you have had some concerns, particularly involving price changes and issues with motor noise after one year of use.\n",
       "\n",
-      "Thank you again for your feedback and for choosing our products.\n",
+      "We understand your disappointment, especially given your loyalty to our brand. Nothing is more important to us than your satisfaction, and we regret that we fell short on your expectations. We appreciate you sharing this feedback as it helps us greatly to know where improvements are needed.\n",
       "\n",
-      "Sincerely,\n",
+      "We assure you that we are not engaged in price gouging. Seasonal sales and promotions can alter prices, but our aim is to continue delivering high-quality products at competitive rates. Regarding the motor noise you've experienced, our products do typically come with a warranty that covers issues such as this. We encourage all customers to verify their warranty coverage and reach out to our customer service team within this period for any concerns or issues.\n",
       "\n",
-      "AI customer agent\n"
+      "Should you have further queries, feedback, or require any form of assistance, please do not hesitate to reach out to our customer service team directly at [Customer Service Contact]. Our aim is to ensure you, our valued customer, have a positive experience with both our customer service and products moving forward.\n",
+      "\n",
+      "Thank you again for your feedback. Your input helps us to serve all our customers better. \n",
+      "\n",
+      "Best Regards,\n",
+      "AI Customer Agent\n"
      ]
     }
    ],
@@ -215,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "465b9657-2693-476d-b64e-dde4506a163a",
    "metadata": {},
    "outputs": [
@@ -223,17 +218,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Subject: Your Recent Product Review and Feedback\n",
+      "\n",
       "Dear Valued Customer,\n",
       "\n",
-      "Thank you for taking the time to leave a review about our product. We are sorry to hear that you experienced an increase in price and that the quality of the product did not meet your expectations. We apologize for any inconvenience this may have caused you.\n",
+      "Thank you for taking the time to share your detailed review and feedback about our 17 piece system. We sincerely apologize for any inconvenience you may have experienced with the price changes and the quality of the product.\n",
       "\n",
-      "We would like to assure you that we take all feedback seriously and we will be sure to pass your comments along to our team. If you have any further concerns, please do not hesitate to reach out to our customer service team for assistance.\n",
+      "We understand your concerns about the price increase during the holiday season and the perceived decrease in quality compared to previous editions. We assure you that we take these matters seriously and are always striving to provide the best value and quality to our customers.\n",
       "\n",
-      "Thank you again for your review and for choosing our product. We hope to have the opportunity to serve you better in the future.\n",
+      "We regret to hear about the issue you encountered with the motor after a year of use. We understand how frustrating it can be when a product does not meet your expectations, especially after the warranty period has expired. \n",
       "\n",
-      "Best regards,\n",
+      "Please know that your feedback is invaluable to us and we will be forwarding your concerns to our product development team for review. We are committed to improving our products and services based on our customers' experiences and feedback.\n",
       "\n",
-      "AI customer agent\n"
+      "Should you have any further concerns or if there's anything else you'd like to discuss, please do not hesitate to reach out to our customer service team. We are here to assist you.\n",
+      "\n",
+      "Thank you once again for your feedback. We appreciate your loyalty and patience as we work to improve our products and services.\n",
+      "\n",
+      "Best Regards,\n",
+      "\n",
+      "AI Customer Agent\n"
      ]
     }
    ],
@@ -267,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
