--- a/notebooks/prompt_engineering /l5-inferring.ipynb
+++ b/notebooks/prompt_engineering /l5-inferring.ipynb
@@ -7,31 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "import openai\n",
-    "from dotenv import find_dotenv, load_dotenv\n",
-    "\n",
-    "_ = load_dotenv(find_dotenv())  # read local .env file\n",
-    "\n",
-    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2e722e92-2764-4bc6-a906-8af60b974f57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0,  # this is the degree of randomness of the model's output\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "from ml_playground.ask_gpt.utils import get_completion"
    ]
   },
   {
@@ -44,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a0ae8f2-cb57-4d09-b390-f961c6c9da87",
    "metadata": {},
    "outputs": [],
@@ -72,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bd2c617a-1067-466d-86cf-646062215ace",
    "metadata": {},
    "outputs": [
@@ -97,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cd1ee53a-7657-4cfb-8064-28dc03ad63bf",
    "metadata": {},
    "outputs": [
@@ -133,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "201413ea-1671-4d0f-8a74-5ef5afa32746",
    "metadata": {},
    "outputs": [
@@ -141,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "happy, satisfied, grateful, impressed, content\n"
+      "satisfaction, appreciation, relief, happiness, trust\n"
      ]
     }
    ],
@@ -168,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "997269d5-3601-42fc-bc94-51f2df6b49ff",
    "metadata": {},
    "outputs": [
@@ -176,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No.\n"
+      "No\n"
      ]
     }
    ],
@@ -202,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f34763ff-fd9c-4ced-a43d-f100e01661a2",
    "metadata": {},
    "outputs": [
@@ -210,10 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"Item\": \"lamp\",\n",
-      "  \"Brand\": \"Lumina\"\n",
-      "}\n"
+      "{\"Item\": \"lamp\", \"Brand\": \"Lumina\"}\n"
      ]
     }
    ],
@@ -248,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b1db3d8b-de4f-467c-bf2e-e7a0a4a024bf",
    "metadata": {},
    "outputs": [
@@ -256,12 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"Sentiment\": \"positive\",\n",
-      "  \"Anger\": false,\n",
-      "  \"Item\": \"lamp with additional storage\",\n",
-      "  \"Brand\": \"Lumina\"\n",
-      "}\n"
+      "{\"Sentiment\": \"positive\", \"Anger\": false, \"Item\": \"lamp\", \"Brand\": \"Lumina\"}\n"
      ]
     }
    ],
@@ -297,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "327ede2f-e0ef-4740-92c3-164c6516abcf",
    "metadata": {},
    "outputs": [],
@@ -333,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8cdee18c-6cbf-40bd-a359-c848ae9f1f2c",
    "metadata": {},
    "outputs": [
@@ -341,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "government survey, job satisfaction, NASA, Social Security Administration, employee concerns\n"
+      "Government survey, Public sector satisfaction, NASA employee satisfaction, Social Security Administration satisfaction, Job satisfaction improvement\n"
      ]
     }
    ],
@@ -362,21 +330,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f6f7970f-02ce-4b1f-8da0-2a06cff681d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['government survey',\n",
-       " ' job satisfaction',\n",
-       " ' NASA',\n",
-       " ' Social Security Administration',\n",
-       " ' employee concerns']"
+       "['Government survey',\n",
+       " ' Public sector satisfaction',\n",
+       " ' NASA employee satisfaction',\n",
+       " ' Social Security Administration satisfaction',\n",
+       " ' Job satisfaction improvement']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "30624119-fa7d-49ba-bac5-0c1d7eba55e6",
    "metadata": {},
    "outputs": [],
@@ -411,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "a7922b32-1cbf-4b38-809a-63021e515ada",
    "metadata": {},
    "outputs": [
@@ -419,11 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nasa: 1\n",
-      "local government: 0\n",
-      "engineering: 0\n",
-      "employee satisfaction: 1\n",
-      "federal government: 1\n"
+      "[1, 0, 0, 1, 1]\n"
      ]
     }
    ],
@@ -445,26 +409,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1838d0ee-cf86-483e-81c0-89aff8a7cc60",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALERT: New NASA story!\n"
-     ]
-    }
-   ],
-   "source": [
-    "topic_dict = {i.split(\": \")[0]: int(i.split(\": \")[1]) for i in response.split(sep=\"\\n\")}\n",
-    "if topic_dict[\"nasa\"] == 1:\n",
-    "    print(\"ALERT: New NASA story!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "4e377caa-a739-4f43-9965-2bd8cf73efdc",
    "metadata": {},
@@ -473,13 +417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"nasa\": 1,\n",
-      "  \"local government\": 0,\n",
-      "  \"engineering\": 0,\n",
-      "  \"employee satisfaction\": 1,\n",
-      "  \"federal government\": 1\n",
-      "}\n"
+      "{\"nasa\": 1, \"local government\": 0, \"engineering\": 0, \"employee satisfaction\": 1, \"federal government\": 1}\n"
      ]
     }
    ],
@@ -524,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
